--- a/style.css
+++ b/style.css
@@ -43,7 +43,7 @@ body {
   margin-left: auto;
   border: 3px solid black;
   box-shadow: 3px 3px pink;
-  display: block
+  display: block;
 }
 
 #great {
